--- a/Develop/style.css
+++ b/Develop/style.css
@@ -122,6 +122,10 @@ button[disabled] {
   overflow: hidden;
 }
 
+#copy {
+  background-color: rgb(12, 102, 0);
+}
+
 @media (max-width: 690px) {
   .btn {
     font-size: 1rem;
